fix overflow issues

--- a/src/components/ContentManager/ContentManager.scss
+++ b/src/components/ContentManager/ContentManager.scss
@@ -1,6 +1,7 @@
 .Content {
   > * {
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
